--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content=Feliz día mi amor>
+    <meta property="og:site_name" content=Feliz día>
+    <meta property="og:url" content=https://engelcituk.github.io/san-valentin/>
+    <meta property="og:description" content=Mensaje para felicitar al amor de mi vida>
+    <meta property="og:type" content="">
+    <meta property="og:image" content=https://res.cloudinary.com/di3qzyeke/image/upload/v1676436714/casados_u6p5z8.jpg>
     <title>Feliz día mi amor</title>
     <link rel="stylesheet" href="./style.css">
 </head>
